# cargv

./: .gitignore  .gitmodules  BUILD.bazel  BUILD.bazel.md  README.md  SConstruct  WORKSPACE  cargv.SConscript  gtest.SConscript  test.SConscript
include/: cargv.h  cargv_version.h  cline.h  sunriset.h  sunriset_option.h  sunriset_version.h
include/cargv/: cargv.h  cargv_version.h
src/: bin.c  cargv.c  cargv_version.c  cline.c  main.c  option.c  sunriset.c
test/: BUILD.bazel  bin_test.cpp  cargv_test.cpp  cline_test.cpp  option_test.cpp  sunriset_test.cpp  test_cargv.cpp
toolchains/: toolchains.py  x64_linux_clang.py  x64_linux_gcc.py  x64_windows_mingw_clang.py  x64_windows_mingw_gcc.py  x64_windows_msys_gcc.py
