# `sunriset` package
# ------------------

# static library
cc_library(
    name='sunriset-static',
    visibility=['//visibility:public'],
    includes=[
        'include',
    ],
    hdrs=[
        'include/sunriset_version.h',
        'include/sunriset.h',
    ],
    srcs=[
        'src/sunriset.c',
    ],
)

# static library
cc_library(
    name='sunriset-bin',
    visibility=['//visibility:public'],
    includes=[
        'include',
    ],
    hdrs=[
        'include/sunriset_option.h',
    ],
    srcs=[
        'src/option.c',
    ],
    deps=[
        'sunriset-static',
        'cline',
    ],
)

# executable binary
cc_binary(
    name='sunriset',
    srcs=[
        'src/main.c',
    ],
    deps=[
        'sunriset-bin',
    ],
)

# cline
cc_library(
    name='cline',
    visibility=['//visibility:public'],
    includes=[
        'include',
    ],
    hdrs=[
        'include/cline.h',
    ],
    srcs=[
        'src/cline.c',
    ],
)

# test: all
test_suite(
    name='test-all',
    tags=[],
    tests=['//test:test-all'],
)
