# `sunriset` package
# ------------------

# static library
cc_library(
    name='static',
    visibility=['//visibility:public'],
    includes=[
        'include',
    ],
    hdrs=[
        'include/sunriset_version.h',
        'include/sunriset.h',
    ],
    srcs=[
        'src/sunriset.c',
    ],
)

# static library
cc_library(
    name='bin',
    visibility=['//visibility:public'],
    includes=[
        'include',
    ],
    hdrs=[
    ],
    srcs=[
        'src/bin.c',
    ],
    deps=[
        'static',
        'cargv',
    ],
)

# executable binary
cc_binary(
    name='sunriset',
    srcs=[
        'src/main.c',
    ],
    deps=[
        'bin',
    ],
)

# cargv
cc_library(
    name='cargv',
    visibility=['//visibility:public'],
    includes=[
        'include',
    ],
    hdrs=[
        'include/cargv_version.h',
        'include/cargv.h',
    ],
    srcs=[
        'src/cargv.c',
    ],
)

# test: all
test_suite(
    name='test-all',
    tags=[],
    tests=['//test:test-all'],
)
