# `cargv`
# =======

# static library
cc_library(
    name='cargv',
    visibility=['//visibility:public'],
    includes=[
        'include',
    ],
    hdrs=[
        'include/cargv_version.h',
        'include/cargv.h',
    ],
    srcs=[
        'src/cargv.c',
    ],
)

# version printing binary
cc_binary(
    name='cargv-version',
    includes=[
        'include',
    ],
    srcs=[
        'include/cargv_version.h',
        'src/cargv_version.c',
    ],
)

# test: all
test_suite(
    name='test-all',
    tags=[],
    tests=['//test:test-all'],
)
